fix: responsive bug where tables sometimes overflowed small screens

--- a/src/dialog-template.css
+++ b/src/dialog-template.css
@@ -288,6 +288,7 @@
   padding: 0;
   margin: 0;
   border: 0;
+  min-width: 0;
 }
 
 #CookieBanner .cookiebanner__preference__heading {
